# OpenDP-Proposal

./: .gitignore  Bindings.md  Cargo.toml  README.md
app/: Cargo.toml
app/src/: main.rs
ffi_probe/: .gitignore  Cargo.toml
ffi_probe/python/: demo.ipynb  main.py  opendp.py  test.py
ffi_probe/src/: core.rs  data.rs  dis.rs  dispatch.rs  dispatch_macros.rs  dom.rs  dom_carrier_no_trait.rs  dom_carrier_trait.rs  dom_no_carrier.rs  ffi_utils.rs  lib.rs  mono.rs  ops.rs  pointer_ffi.rs
opendp/: Cargo.toml
opendp-core/: .gitignore
opendp-core/python/: demo.ipynb  opendp.py  test.py
opendp-core/rust/: Cargo.toml
opendp-core/rust/opendp/: Cargo.toml
opendp-core/rust/opendp/src/: core.rs  data.rs  dis.rs  dom.rs  lib.rs  meas.rs  ops.rs  trans.rs
opendp-derive/: Cargo.toml
opendp-derive/src/: lib.rs
opendp-derive/tests/: demo.rs
opendp/src/: ffi.rs  lib.rs
opendp/src/base/: domain.rs  functions.rs  metric.rs  mod.rs  traits.rs  value.rs
opendp/src/constructors/: aggregate.rs  chain.rs  mechanisms.rs  mod.rs  preprocess.rs
python/: main.py
release_schemas/: README.md  test_schemas.py
release_schemas/version-0.0.1-draft/: release-schema.json
src/: base.rs  constructors.rs  domain.rs  example_7_30_compiler_validation.rs  example_8_3_2_atomic_domain_trait.rs  example_8_4_1_data_domain_enum.rs  example_8_4_3_trait_relations.rs  example_8_4_4_enum_relations.rs  example_8_4_5_queryable.rs  ffi.rs  lib.rs  metric.rs  traits.rs  utilities.rs
src/base/: metric.rs
src/components/: chain.rs  clamp.rs  impute.rs  mod.rs  noisy_sum.rs
src/constructors/: aggregate.rs  chain.rs  mapping.rs  mod.rs  preprocess.rs
src/example_6_25/: mod.rs
src/example_8_5/: domain.rs  metric.rs  mod.rs
src/example_8_9/: constructors.rs  domain.rs  metric.rs  mod.rs  sugar.rs
tests/: integration.rs
(+23 files in other folders)
