[package]
name = "opendp"
version = "0.1.0"
authors = ["OpenDP-SmartNoise <smartnoise@opendp.io>"]
edition = "2018"

[dependencies]
num = "0.3.0"
thiserror = "1.0.20"
derive_more = "0.99.9"
indexmap = "1.5.1"
noisy_float = "0.1.13"
itertools = "0.9.0"

[lib]
name = "opendp"
crate-type = ["rlib", "cdylib"]
